package com.questforge.model;

public enum QuestType {
    MAIN,
    SIDE,
    DAILY
}
